--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
           <input name="color" type="color">
         </label>
         <label>
-          Whats time do you go to bed?
+          What time do you go to bed?
           <input name="bedTime" type="time">
         </label>
         <label>
@@ -102,8 +102,8 @@
           </select>
         </label>
         <label>
-          How do you rate your work?
-          <input name="workRate" type="range">
+          How do you rate our work?
+          <input name="workRate" type="range" value="0">
         </label>
       </fieldset>
 
@@ -111,7 +111,7 @@
         <legend>Addition info:</legend>
         <label>
           Comments:
-          <textarea name="comments" cols="30" rows="5"></textarea>
+          <textarea name="comments"></textarea>
         </label>
         <label>
           Would you reccomend us?
