--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
         <legend>Personal information</legend>
         <label class="label">
           Surname:
-          <input name="surname"
+          <input
+            name="surname"
             type="text"
             autocomplete="off"
             minlength="3"
@@ -30,7 +31,8 @@
         </label>
         <label class="label">
           Name:
-          <input name="name"
+          <input
+            name="name"
             type="text"
             autocomplete="off"
             minlength="3"
@@ -51,11 +53,19 @@
         </label>
         <label class="label">
           Full date of birth:
-          <input name="birthDate" type="date" required>
+          <input
+            name="birthDate"
+            type="date"
+            required
+          >
         </label>
         <label class="label label_last">
           I accept the term of the agreement
-          <input name="acception" type="checkbox" required>
+          <input
+            name="acception"
+            type="checkbox"
+            required
+          >
         </label>
       </fieldset>
 
@@ -96,7 +106,11 @@
         </label>
         <label class="label">
           What time do you go to bed?
-          <input name="bedTime" type="time" step="1">
+          <input
+            name="bedTime"
+            type="time"
+            step="1"
+          >
         </label>
         <label class="label">
           What are your favorite brand of cars?
@@ -108,7 +122,11 @@
         </label>
         <label class="label label_last">
           How do you rate our work?
-          <input name="workRate" type="range" value="0">
+          <input
+            name="workRate"
+            type="range"
+            value="0"
+          >
         </label>
       </fieldset>
 
